# jsettings

./: CMakeLists.txt  README.md  main.cpp
include/: Table.hpp
param/: Param.hpp  SourceTypes.hpp  ValueTypes.hpp
table/: Table.hpp  TableDefaults.hpp  TableImpl.hpp
table/persistent/: ParamEntity.hpp  ParamTypeConverter.hpp  PersistentTable.hpp
table/persistent/sqlite/: SQLiteAdapter.hpp  SQLiteDAO.hpp  SQLitePersistentTable.hpp
test/: DummyTableDefaults.hpp  ParamTest.cpp  TableTest.cpp
utils/: DispatchQueue.hpp
